# seabird-proxy-plugin

./: Cargo.toml  Dockerfile  build.rs  config.json  entrypoint.sh
src/: client.rs  main.rs  prelude.rs
