[package]
name = "seabird-proxy-plugin"
version = "0.1.0"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
futures = "0.3"
http = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
prost = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["fs", "macros", "rt-core", "signal", "stream", "sync", "time"] }
tonic = { version = "0.2", features = ["tls", "tls-roots"] }

[build-dependencies]
tonic-build = { version = "0.2", features = ["prost"] }
