[package]
name = "seabird-proxy-plugin"
version = "0.1.0"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["fs", "macros", "rt-core", "signal", "stream", "sync", "time"] }

seabird = "0.2.0-alpha.1"
