[package]
name = "seabird-proxy-plugin"
version = "0.1.0"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.0", features = ["sync"] }

seabird = "0.3.0-alpha.1"
